renamed and updated lessons section to discovery

--- a/apps/accounts/templates/accounts/lesson.html
+++ b/apps/accounts/templates/accounts/lesson.html
@@ -52,9 +52,8 @@
 			<tr>
 				<td>
 
-				Title: <span class="bold">{{ lesson.name }}</span> - <a href="{% url 'like_lesson' lesson.id %}">Like!</a>
+				<span class="bold">{{ lesson.name }}</span> - <a href="{% url 'like_lesson' lesson.id %}">Like</a>
 
-				<h4>Lesson...</h4>
 				<p>{{ lesson.lesson_content }}</p>
 
 				</td>
