--- a/apps/home/templates/home/discovery.html
+++ b/apps/home/templates/home/discovery.html
@@ -63,7 +63,7 @@
             </tr>
             <tr>
                 <td class="top">
-                    <h1>D Major:</h1>
+                    <h1>D Minor:</h1>
                 </td>
                 <td>
                     <img src="{% static 'home/d.jpg' %}" class="disc">
